# CH_DataStorage

./: CMakeLists.txt  datastorage.abi  datastorage.cpp  datatransactions.cpp  votingcontract.cpp
UI/: PatientDashboard.html  ResearcherDashboard.html  VotingProtocol.html
UI/assets/: barchart.js
UI/js/: blockchain.js  eosjs.js  votingProtocol.js
